--- a/appendix/CompleteCode.tex
+++ b/appendix/CompleteCode.tex
@@ -1,10 +1,8 @@
-\appendixchapter{Code of the Programm}
-% TOCHANGE (add your appendix chapter here)
-\label{code}
-\begin{lstlisting}[language=Python, caption=Code of the Programm, escapechar=|]
-    def hello_world():
-        print("Hello World!")
-    
-    if __name__ == "__main__":
-        hello_world()
+\appendixchapter{Code}
+\markboth{Code}{Code}
+\label{app:code}
+
+
+\begin{lstlisting}[language=Java, caption=Summenlösung: AverageSpeed.java, escapechar=§, label=lst:fullCode]
+
 \end{lstlisting}
