--- a/bibtex.bib
+++ b/bibtex.bib
@@ -1,8 +1,6 @@
-@online{ParquetStats,
-  author            = {Thomas Spicer},
-  date              = {2023-06-29},
-  publisher         = {DZone},
-  title             = {Apache Parquet vs. CSV Files},
-  year              = {2019},
-  url               = {https://dzone.com/articles/how-to-be-a-hero-with-powerful-parquet-google-and}
+@manual{aufgabe,
+  author            = {IHK Schwarzwald Baar},
+  date              = {2024-06-10},
+  title             = {Abschlussprüfung Sommer 2024},
+  subtitle          = {Mathematisch-technischer Softwareentwickler, Entwicklung eines Softwareprojekts},
 }
