--- a/content/0_einleitung.tex
+++ b/content/0_einleitung.tex
@@ -50,7 +50,7 @@ Val4 & Val5 & Val6 \\
 
 \section{Listings}
 
-\begin{lstlisting}[language=java, caption=Hallo Welt in Java]
+\begin{lstlisting}[language=java, caption=Hallo Welt in Java, label=code]
 public class HalloWelt 
 {
 	public static void main(String[] args) 
@@ -60,6 +60,15 @@ public class HalloWelt
 }
 \end{lstlisting}
 
+\section{Referenzen}
+
+\autoref{pic:bild1} zeigt ein Bild. \autoref{pic:bild2} zeigt ein weiteres Bild. \autoref{code} zeigt ein Listing.
+
+\section{Mathematische Formeln}
+
+Formeln gibt es Inline $\approx 3.4028*10^{38}$, aber auch als eigenen Absatz.
+
+\[2^{128} = 340282366920938463463374607431768211456 \approx 3.4028*10^{38}\]
 
 \section{Abkürzungen}
 
