--- a/framework/abbreviations.tex
+++ b/framework/abbreviations.tex
@@ -1,7 +1,8 @@
-\chapter*{List of Abbreviations\markboth{List of Abbreviations}}
-\addcontentsline{toc}{chapter}{List of Abbreviations}
-% TOCHANGE (add your abbreviations here)
-\begin{acronym}[HFU] % [HFU] controls the width in the list of abbreviations, replace this with your longest acronym
-    \acro{HFU}{Hochschule Furtwangen University}
+\chapter*{Abkürzungsverzeichnis\markboth{Abkürzungsverzeichnis}}
+\addcontentsline{toc}{chapter}{Abkürzungsverzeichnis}
+\begin{acronym}[MSB] % [HFU] controls the width in the list of abbreviations, replace this with your longest acronym
+    \acro{IDE}{Integrated Development Environment\acroextra{ (Integrierte Entwicklungsumgebung)}}
+    \acro{MSB}{Most Significant Bit\acroextra{ (Höchstwertigstes Bit. Das Bit, das den höchsten Wert in einer Zahl darstellt, und klassischerweise links steht.)}}
+    \acro{JDK}{Java Development Kit}
 \end{acronym}
 
