--- a/framework/titlepage.tex
+++ b/framework/titlepage.tex
@@ -5,13 +5,12 @@
     \begin{flushright}
         \begin{figure}[ht]
             \flushright
-            \includegraphics[height=2cm]{pictures/hfu_logo_vector_4C.eps}
+            \includegraphics[height=2cm]{pictures/ihk.jpg}
         \end{figure}
     \end{flushright}
     
     \begin{center}
         {\fontsize{18}{18} \selectfont \docType}\\[5mm]
-        {\fontsize{18}{18} \selectfont im Bereich} \\[5mm]
         {\fontsize{18}{18} \selectfont \docStudyProgram}\\
         
         \vspace{1cm}
@@ -19,17 +18,16 @@
         {\fontsize{22}{22} \selectfont \textbf{\docTitle}}\\[5mm]
         {\fontsize{18}{18} \selectfont \docSubTitle}
     
-        \vspace{6cm}
+        \vspace{12cm}
         
         \begin{tabular}{ll}
-            Referent:      & \docSupervisor    \\\\
-            Korreferent:    & \docCosupervisor  \\\\
-            Ersetztes Modul:    & \docModule  \\\\
-            eingereicht am:       & \docDeadline      \\\\
-            eingereicht von:       & \docAuthor        \\
-                                & matriculation~number:~\docMatriculationNumber\\
-                                & \docStreetName,~\docPostalCode~\docCity\\
-                                & \docEmail			
+            Vorgelegt am:       & \docDeadline      \\\\
+            Vorgelegt von:      & \docAuthor        \\
+                                & \docEmail	\\
+                                & \docMatriculationNumber\\\\
+            Ausbildungsbetrieb: & \docAusbildungsbetrieb        \\
+                                & \docStreetName\\
+                                & \docPostalCode~\docCity\\\\
         \end{tabular}
     \end{center}
     \end{titlepage}
